iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss2.local_10.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [],
          "devpath": "/devices/virtual/block/dm-15",
          "dm_name": "mpatho",
          "filesystem_type": "zfs_member",
          "fs_label": "ost14",
          "fs_uuid": "7343300484951083089",
          "major": "253",
          "minor": "15",
          "mount": null,
          "paths": [
            "/dev/mapper/mpatho",
            "/dev/disk/by-id/dm-name-mpatho",
            "/dev/disk/by-id/dm-uuid-mpath-36001405be573fca80964b1c955fabaf5",
            "/dev/disk/by-label/ost14",
            "/dev/disk/by-uuid/7343300484951083089",
            "/dev/dm-15"
          ],
          "scsi80": "SLIO-ORG ost5            be573fca-8096-4b1c-955f-abaf5b0d2912",
          "serial": "36001405be573fca80964b1c955fabaf5",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host3/session2/target3:0:0/3:0:0:4/block/sdai",
    "filesystem_type": "mpath_member",
    "fs_label": "ost14",
    "fs_uuid": "7343300484951083089",
    "major": "66",
    "minor": "32",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-36001405be573fca80964b1c955fabaf5",
      "/dev/disk/by-id/wwn-0x6001405be573fca80964b1c955fabaf5",
      "/dev/disk/by-path/fc---lun-4",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-4",
      "/dev/disk/by-label/ost14",
      "/dev/disk/by-uuid/7343300484951083089",
      "/dev/sdai"
    ],
    "scsi80": "SLIO-ORG ost5            be573fca-8096-4b1c-955f-abaf5b0d2912",
    "serial": "36001405be573fca80964b1c955fabaf5",
    "size": 5368709120
  }
}
