iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss2.local_15.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [],
          "devpath": "/devices/virtual/block/dm-17",
          "dm_name": "mpathn",
          "filesystem_type": "zfs_member",
          "fs_label": "ost13",
          "fs_uuid": "2098662261227363666",
          "major": "253",
          "minor": "17",
          "mount": null,
          "paths": [
            "/dev/mapper/mpathn",
            "/dev/disk/by-id/dm-name-mpathn",
            "/dev/disk/by-id/dm-uuid-mpath-36001405d4291d03c272490f94413850d",
            "/dev/disk/by-label/ost13",
            "/dev/disk/by-uuid/2098662261227363666",
            "/dev/dm-17"
          ],
          "scsi80": "SLIO-ORG ost4            d4291d03-c272-490f-9441-3850d7385f32",
          "serial": "36001405d4291d03c272490f94413850d",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:3/block/sdaj",
    "filesystem_type": "mpath_member",
    "fs_label": "ost13",
    "fs_uuid": "2098662261227363666",
    "major": "66",
    "minor": "48",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-36001405d4291d03c272490f94413850d",
      "/dev/disk/by-id/wwn-0x6001405d4291d03c272490f94413850d",
      "/dev/disk/by-path/fc---lun-3",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-3",
      "/dev/disk/by-label/ost13",
      "/dev/disk/by-uuid/2098662261227363666",
      "/dev/sdaj"
    ],
    "scsi80": "SLIO-ORG ost4            d4291d03-c272-490f-9441-3850d7385f32",
    "serial": "36001405d4291d03c272490f94413850d",
    "size": 5368709120
  }
}
